--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -194,7 +194,7 @@ node(TARGET_NODE) {
         returnStatus: true,
         script: "rpm -q --quiet go-toolset-7") == 0
     
-    if (use_collections && build_version >= new VersionString("3.11")) {
+    if (collectons_installed && build_version >= new VersionString("3.11")) {
         collection = 'go-toolset-7'
     } else {
         collection = null
@@ -267,13 +267,6 @@ node(TARGET_NODE) {
                 sh "git reset --hard HEAD"
             }
         }
-
-//        stage("prepare go-bindata") {
-//            sh "mkdir -p ~/go"
-//            sh "go get github.com/jteeuwen/go-bindata"
-//            sh "go build github.com/jteeuwen/go-bindata"
-//            sh "go install github.com/jteeuwen/go-bindata"
-//        }
         
         stage("merge upstream ${upstream_project_name}") {
             dir(package_path) {
