--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -194,7 +194,7 @@ node(TARGET_NODE) {
         returnStatus: true,
         script: "rpm -q --quiet go-toolset-7") == 0
     
-    if (collectons_installed && build_version >= new VersionString("3.11")) {
+    if (collecton_installed && build_version >= new VersionString("3.11")) {
         collection = 'go-toolset-7'
     } else {
         collection = null
