--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -308,6 +308,8 @@ node(TARGET_NODE) {
         if (build_version == 'master') {
             def version_string = rpm_spec.version
             def version = new VersionString(version_string)
+            echo "version: ${version}"
+            echo "MajorMinor: ${version.getMajorMinor}"
             build_version = version.getMajorMinor
         }
 
