--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -306,11 +306,12 @@ node(TARGET_NODE) {
         // re-read the new spec
         def rpm_spec = new RpmSpecfile(readFile(spec_path))
         if (build_version == 'master') {
+            debug("detecting master version")
             def version_string = rpm_spec.version
             def version = new VersionString(version_string)
             echo "version: ${version}"
             echo "MajorMinor: ${version.getMajorMinor()}"
-            build_version = version.getMajorMinor()
+            build_version = new VersionString(version.getMajorMinor())
         }
 
         // versions >= 3.11 require go-toolset-7 software collection to build
