--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -306,7 +306,7 @@ node(TARGET_NODE) {
         // re-read the new spec
         def rpm_spec = new RpmSpecfile(readFile(spec_path))
         if (build_version == 'master') {
-            debug("detecting master version")
+            echo("detecting master version")
             def version_string = rpm_spec.version
             def version = new VersionString(version_string)
             echo "version: ${version}"
