--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -75,7 +75,8 @@ properties(
                     defaultValue: false
                 ],
             ]
-        ]
+        ],
+        disableConcurrentBuilds()
     ]
 )
 
