--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -81,7 +81,8 @@ properties(
                     defaultValue: false
                 ],
             ]
-        ]
+        ],
+        disableConcurrentBuilds()
     ]
 )
 
