--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -140,7 +140,7 @@ def get_releases(repo_url, pattern="enterprise-") {
     def r = get_branches(repo_url, pattern + '*')
         .collect { it - pattern }
         .findAll { it =~ /^\d+((\.\d+)*)$/ }
-        .collect { new VersionString(it) }
+        .collect { new Version(it) }
         .sort()
 
     return r
@@ -190,7 +190,7 @@ node(TARGET_NODE) {
     } else if (BUILD_VERSION == 'stage') {
         error("Not implemented: build should be most recent numbered branch")
     } else {
-        build_version = new VersionString(BUILD_VERSION)
+        build_version = new Version(BUILD_VERSION)
     }
 
     collection_installed = sh(
