--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -197,7 +197,7 @@ node(TARGET_NODE) {
         returnStatus: true,
         script: "rpm -q --quiet go-toolset-7") == 0
     
-    //if (collection_installed && build_version >= new VersionString("3.11")) {
+    //if (collection_installed && build_version >= new Version("3.11")) {
     //    collection = 'go-toolset-7'
     //} else {
         collection = null
