--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -237,7 +237,7 @@ node(TARGET_NODE) {
 
         // need new version and new release
         stage("update build/release numbers") {
-            def rpm_spec = new RpmSpecfile(readFile(spec_path))
+            def rpm_spec = new RpmSpecfile(readFile(package_repo.specpath))
             current_version = rpm_spec.version
             current_release = rpm_spec.release
 
