--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -237,7 +237,7 @@ node(TARGET_NODE) {
 
         // need new version and new release
         stage("update build/release numbers") {
-            def spec_file = package_repo.specpath
+            def spec_file = package_repo.specfile
             echo "looking up spec_file: ${spec_file}"
             def rpm_spec = new RpmSpecfile(readFile(spec_file))
             current_version = rpm_spec.version
