--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -232,7 +232,10 @@ node(TARGET_NODE) {
     
     sshagent([SSH_KEY_ID]) {
         stage("clone ${package_name}") {
+            echo "cloning to ${package_name}"
             package_repo.clone()
+            echo "cloning complete"
+            
         }
 
         // need new version and new release
