--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -210,6 +210,10 @@ node(TARGET_NODE) {
     brew_task_url_prefix = 'https://brewweb.engineering.redhat.com/brew/taskinfo?taskI='
 
     package_repo = new GitHubRepository(GITHUB_OWNER, package_name, pipeline=this)
+
+    if (package_repo.pipeline == null) {
+        error "repo object did not store pipeline"
+    }
     //spec_filename = "${package_name}.spec"
     //spec_path = "${package_repo.path}/${spec_filename}"
     
