use the repo to get the version number from spec

--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -305,6 +305,11 @@ node(TARGET_NODE) {
         }
 
         // re-read the new spec
+        if (package_repo.package_name != 'origin') {
+            error("package repo name is incorrect: ${package_repo.package_name} resulting in incorrect spec path: ${package_repo.specpath}")
+        }
+        spec_path = package_repo.specpath
+        
         def rpm_spec = new RpmSpecfile(readFile(package_repo.specpath))
         if (build_version == 'master') {
             echo("detecting master version")
