--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -268,11 +268,11 @@ node(TARGET_NODE) {
     // clean up before starting
     sh "rm -rf $repo_name"
 
-    package_repo = new GitHubRepository(GITHUB_OWNER, repo_name, package_name="origin")
+    package_repo = new GitHubRepository(owner=GITHUB_OWNER, project=repo_name, package_name="origin")
     package_repo.pipeline = this
 
     // re-read the new spec
-    package_repo.package_name = 'origin'
+    //package_repo.package_name = 'origin'
     if (package_repo.package_name != 'origin') {
         error("package repo name is incorrect: ${package_repo.package_name} resulting in incorrect spec path: ${package_repo.specpath}")
     }
