--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -276,6 +276,10 @@ node(TARGET_NODE) {
     if (package_repo.package_name != 'origin') {
         error("package repo name is incorrect: ${package_repo.package_name} resulting in incorrect spec path: ${package_repo.specpath}")
     }
+
+    echo """package_repo contents:\n
+  origin: ${package_repo.origin}
+"""
     spec_path = package_repo.specpath
 
     //repo_url = GITHUB_BASE + "/${package_name}.git"
