--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -274,7 +274,7 @@ node(TARGET_NODE) {
     // re-read the new spec
     //package_repo.package_name = 'origin'
     echo """package_repo contents:\n
-  origin: ${package_repo.origin}
+  owner: ${package_repo.owner}
 """
     if (package_repo.package_name != 'origin') {
         error("package repo name is incorrect: ${package_repo.package_name} resulting in incorrect spec path: ${package_repo.specpath}")
