use the repo to get the version number from spec

--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -323,8 +323,8 @@ node(TARGET_NODE) {
             def version_string = rpm_spec.version
             def version = new Version(version_string)
             echo "version: ${version}"
-            echo "MajorMinor: ${version.getMajorMinor()}"
-            build_version = new Version(version.getMajorMinor())
+            echo "MajorMinor: ${version.getMajorMinor}"
+            build_version = new Version(version.getMajorMinor)
         }
 
         // versions >= 3.11 require go-toolset-7 software collection to build
