--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -268,26 +268,15 @@ node(TARGET_NODE) {
     // clean up before starting
     sh "rm -rf $repo_name"
 
-    //package_repo = new GitHubRepository(GITHUB_OWNER, repo_name)
-    //package_repo.package_name = "origin"
-    //package_repo.pipeline = this
-    package_repo = new GitHubRepository([owner: GITHUB_OWNER, project: "ose", package_name: "origin", pipeline: this])
-
-    // re-read the new spec
-    //package_repo.package_name = 'origin'
-    echo """package_repo contents:\n
-  owner: ${package_repo.owner}
-"""
-    if (package_repo.package_name != 'origin') {
-        error("package repo name is incorrect: ${package_repo.package_name} resulting in incorrect spec path: ${package_repo.specpath}")
-    }
+    package_repo = new GitHubRepository(
+        [
+            owner: GITHUB_OWNER,
+            project: "ose",
+            package_name: "origin",
+            pipeline: this
+        ])
 
     spec_path = package_repo.specpath
-
-    //repo_url = GITHUB_BASE + "/${package_name}.git"
-    //spec_filename = "${package_name}.spec"
-    //spec_filename = "origin.spec"
-    //spec_path = "${package_name}/${spec_filename}"
 
     releases = package_repo.releases(branch_prefix)
     
